Update BaiVietController.java